2007-06-09  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* doc/fvwm-man.xsl:
	don't use .PP at the first paragraph in a subsub+section.
	foce two spaces between sentences, and force no blank lines at start
	of paragraphs
	fix markup of non section header cmdsynopsis

	* doc/commands/MenuStyle.xml:
	use <command> for oldstyle syntax

	* doc/commands/Menu.xml:
	fixed typo

	* doc/fvwm/fonts.xml:
	insert paragraph brake as per old man page
	make sure that the . alias for Center appears in man output

2007-06-10  Scott Smedley  <ss(at)aao(dot)gov(dot)au>
	* doc/Makefile.am:
	* doc/fvwm/Makefile.am:
	* doc/commands/Makefile.am:
	* doc/modules/Makefile.am:
	* doc/docbook-xsl/profiling/profile.xsl: (new)
	* doc/docbook-xsl/profiling/profile-mode.xsl: (new)
	Use 2-pass profiling on all XML files.

	* doc/README:
	Use <keysym> (instead of <emphasis>) for key names.
	Replaced <manonly> & <htmlonly> with <... output="html"> etc.

	* doc/allCommands.html:
	* doc/groupedCommands.html:
	* doc/index.html:
	* doc/modules/modules.html: (deleted)
	* doc/modules.html: (new)
	* doc/header.html:
	Moved modules.html.

	* doc/fvwm.xsl:
	* doc/fvwm-man.xsl:
	Removed <manonly> & <htmlonly>.

	* doc/fvwm/images.xml:
	* doc/fvwm/initialization.xml:
	Replaced use of <manonly> & <htmlonly> with <... output="...">.

	* doc/modules/FvwmTabs.xml:
	* doc/modules/images/FvwmTabs/menu.png: (new)
	* doc/modules/images/FvwmTabs/green.png: (new)
	* doc/modules/images/FvwmTabs/yellow.png: (new)
	* doc/modules/images/FvwmTabs/red.png: (new)
	* doc/modules/images/FvwmTabs/screenshot.png: (new)
	* doc/modules/images/FvwmTabs/fvwmTabsEmpty.png: (new)
	* doc/modules/images/FvwmTabs/logoFvwmTabs.png: (new)
	Created FvwmTabs man page.

2007-06-09  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* doc/commands/.cvsignore:
	* doc/commands/Makefile.am (COMMANDS):
	* doc/commands/AddDecor.xml:
	removed documentation of unexisting AddDecor command

	* doc/fvwm/moduleCommands.xml:
	Include * instead of +
