@@ -25,6 +25,7 @@ Changes in beta release 2.5.22 (not released yet)
    - Documentation in HTML format.
    - Replaced "UseListSkip" with "UseSkipList" & "OnlyListSkip" with
      "OnlySkipList" in WindowList command. (Old options deprecated.)
+   - New subject ImageCache for PrintInfo command.
 
 * New module features:
 
